@@ -3,8 +3,8 @@
 namespace Drupal\search_api_views_taxonomy\Plugin\views\argument;
 
 use Drupal\Component\Utility\Html;
+use Drupal\Core\Cache\UncacheableDependencyTrait;
 use Drupal\search_api\Plugin\views\argument\SearchApiStandard;
-use Drupal\search_api\UncacheableDependencyTrait;
 use Drupal\taxonomy\Entity\Term;
 
 /**
