@@ -2,8 +2,8 @@
 
 namespace Drupal\search_api_views_taxonomy\Plugin\views\filter;
 
+use Drupal\Core\Cache\UncacheableDependencyTrait;
 use Drupal\search_api\Plugin\views\filter\SearchApiFilterTrait;
-use Drupal\search_api\UncacheableDependencyTrait;
 use Drupal\taxonomy\Plugin\views\filter\TaxonomyIndexTid;
 
 /**
