@@ -2,10 +2,10 @@
 
 namespace Drupal\search_api\Plugin\views\argument;
 
+use Drupal\Core\Cache\UncacheableDependencyTrait;
 use Drupal\Core\Form\FormStateInterface;
 use Drupal\search_api\ParseMode\ParseModePluginManager;
 use Drupal\search_api\Plugin\views\query\SearchApiQuery;
-use Drupal\search_api\UncacheableDependencyTrait;
 use Symfony\Component\DependencyInjection\ContainerInterface;
 
 /**
