@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2711017 by drunken monkey: Adapted Core's UncacheableDependencyTrait.
 - #2690229 by drunken monkey: Adapted Core's SubformState solution.
 - #2575641 by rbayliss, dazz, drunken monkey: Fixed behavior of "Save and edit"
   button for indexes.
